GET /tournaments/upcoming Route Deactivated
