# docs/swagger.yaml
@@ -547,47 +547,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /api/v1/tournaments/upcoming:
-    get:
-      tags:
-        - tournaments
-      summary: Get upcoming tournaments
-      description: Get tournaments that are open for registration or upcoming
-      parameters:
-        - name: limit
-          in: query
-          description: Maximum number of results
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 100
-            default: 20
-        - name: format
-          in: query
-          description: Response format
-          schema:
-            type: string
-            enum: [json, csv]
-            default: json
-      responses:
-        '200':
-          description: List of upcoming tournaments
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/TournamentResponse'
-            text/csv:
-              schema:
-                type: string
-
   /api/v1/tournaments/recent:
     get:
       tags:
